--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint . --ignore-path .gitignore",
+    "lint:fix": "next lint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@types/node": "20.3.3",
+    "next": "13.4.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@debbl/eslint-config-prettier": "^0.0.45",
+    "@debbl/eslint-config-react": "^0.0.45",
+    "@debbl/eslint-config-tailwindcss": "^0.0.45",
+    "@types/node": "^20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
