--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@debbl/eslint-config-prettier": "^0.0.45",
     "@debbl/eslint-config-react": "^0.0.45",
     "@debbl/eslint-config-tailwindcss": "^0.0.45",
+    "@iconify/icons-carbon": "^1.2.18",
+    "@iconify/react": "^4.1.1",
     "@types/node": "^20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
