--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@debbl/eslint-config-prettier": "^0.0.45",
-    "@debbl/eslint-config-react": "^0.0.45",
-    "@debbl/eslint-config-tailwindcss": "^0.0.45",
+    "@debbl/eslint-config": "^0.0.53",
     "@iconify/icons-carbon": "^1.2.19",
     "@iconify/react": "^4.1.1",
     "@types/node": "^20.5.6",
